fix edit views with bootstrap active and various cleanups. Collapsed bodies should be visibile in the tinymce editor area

--- a/collective/sweeteditor/browser/css/sweeteditor.css
+++ b/collective/sweeteditor/browser/css/sweeteditor.css
@@ -17,17 +17,11 @@
     content: "▼ " !important;
 }
 
+.mceContentBody .collapse {
+    display: block;
+}
+
 .mceContentBody .panel-group {
-    display: inherit;
-    border: thin dashed red;
-}
-
-.mceContentBody .panel {
-    display: inherit;
-    border: thin dashed red;
-}
-
-.mceContentBody .collapsedBody {
     display: inherit;
     border: thin dashed red;
 }
